using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MyTags : MonoBehaviour
{
    public static string RUNANIMATION = "Run";
    public static string ATTACKANIMATION = "Attack";
    public static string RUNATTACKANIMATION = "RunAttack";
    public static string DEADANIMATION = "Dead";

    public static string RUNTRIGGER = "Run";
    public static string STOPTRIGGER = "Stop";
    public static string ATTACKTRIGGER = "Attack";
    public static string JUMPTRIGGER = "Jump";
    public static string DEADTRIGGER = "Dead";

    public static string PLAYERTAG = "Player";
    public static string ENEMYTAG = "Enemy";
    public static string COINTAG = "Coin";
}
